# tools

./: .gitignore  AGENTS.md  CNAME  README.md  activity-time-to-met-calories-burned.html  analyze-claude-history.py  bmr-calculator.html  board-cut-optimizer.html  bortz-blood-age.html  build.sh  chess-timer.html  combine-rides.html  download.sh  drink-gel-recovery-calculator.html  footer.js  ftp-vo2max.html  index.html  package-lock.json  package.json  powerlifting-factor-calculator.html  riding-physics-estimator.html  sri-sleep-calculator.html  steps-to-calories-burned-in-15-minutes.html  steps-to-calories-burned-no-speed.html  steps-to-calories-burned.html  tacx-power.html  wav-recorder.html  white-noise.html  workout-route-tuner.html
fitness-activity-viewer/: Makefile  README.md  build-bundle.py  index.html  pyproject.toml
fitness-activity-viewer/src/: single-page-chartjs.html  single-page-d3.html
fitness-activity-viewer/test/: conftest.py  test_activity_viewer.py
fitness-activity-viewer/test/test-cases/: README.md  test-runner.html
fitness-activity-viewer/test/test-cases/bundled/: activity.gpx  index.html
fitness-activity-viewer/test/test-cases/bundled-d3/: index.html  metadata.yaml
fitness-activity-viewer/test/test-cases/full-activity/: index.html
fitness-activity-viewer/test/test-cases/full-activity-d3/: activity.fit  index.html
power-curve-profiler/: Cargo.toml  index.html
power-curve-profiler/pkg/: power_scanner.d.ts  power_scanner.js  power_scanner_bg.wasm  power_scanner_bg.wasm.d.ts
power-curve-profiler/src/: lib.rs  main.rs
(+13 files in other folders)
