[package]
name = "power-scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "power-scanner"
path = "src/main.rs"

[dependencies]
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
